# libagdb

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libagdb-wiki.ini  libagdb.ini  libagdb.pc.in  libagdb.spec.in  synclibs.ps1  synclibs.sh  synctestdata.ps1  synctestdata.sh
.github/workflows/: build_linux.yml  build_macos.yml  build_ossfuzz.yml  build_windows.yml  coverage.yml
.travis/: runtests.sh  script.sh
agdbtools/: Makefile.am  agdbinfo.c  agdbinput.c  agdbinput.h  agdboutput.c  agdboutput.h  agdbtools_getopt.c  agdbtools_getopt.h  agdbtools_i18n.h  agdbtools_libagdb.h  agdbtools_libbfio.h  agdbtools_libcerror.h  agdbtools_libclocale.h  agdbtools_libcnotify.h  agdbtools_libcstring.h  agdbtools_libcsystem.h  agdbtools_libfdatetime.h  agdbtools_libuna.h  agdbtools_output.c  agdbtools_output.h  agdbtools_signal.c  agdbtools_signal.h  agdbtools_unused.h  info_handle.c  info_handle.h
common/: config_winapi.h  narrow_string.h
documentation/: Windows SuperFetch (DB) format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libagdb.h.in
include/libagdb/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libagdb/: Makefile.am  agdb_database_header.h  agdb_executable_information.h  agdb_file_header.h  agdb_file_information.h  agdb_source_information.h  agdb_volume_information.h  libagdb.c  libagdb.rc.in  libagdb_codepage.h  libagdb_compressed_block.c  libagdb_compressed_block.h  libagdb_compressed_blocks_stream.c  libagdb_compressed_blocks_stream.h  libagdb_compressed_blocks_stream_data_handle.c  libagdb_compressed_blocks_stream_data_handle.h  libagdb_compressed_file_header.c  libagdb_compressed_file_header.h  libagdb_database_header.c  libagdb_database_header.h  libagdb_debug.c  libagdb_debug.h  libagdb_definitions.h  libagdb_definitions.h.in  libagdb_error.c  libagdb_error.h  libagdb_executable_information.c  libagdb_executable_information.h  libagdb_extern.h  libagdb_file.c  libagdb_file.h  libagdb_file_header.c  libagdb_file_header.h  libagdb_file_information.c  libagdb_file_information.h  libagdb_hash.c  libagdb_hash.h  libagdb_io_handle.c  libagdb_io_handle.h  libagdb_libbfio.h  (+26 more)
manuals/: Makefile.am  agdbinfo.1  libagdb.3
msvscpp/: Makefile.am  libagdb.sln
msvscpp/agdb_test_compressed_block/: agdb_test_compressed_block.vcproj
msvscpp/agdb_test_compressed_blocks_stream_data_handle/: agdb_test_compressed_blocks_stream_data_handle.vcproj
msvscpp/agdb_test_compressed_file_header/: agdb_test_compressed_file_header.vcproj
msvscpp/agdb_test_error/: agdb_test_error.vcproj
msvscpp/agdb_test_file/: agdb_test_file.vcproj
msvscpp/agdb_test_file_information/: agdb_test_file_information.vcproj
msvscpp/agdb_test_get_version/: agdb_test_get_version.vcproj
msvscpp/agdb_test_io_handle/: agdb_test_io_handle.vcproj
msvscpp/agdb_test_notify/: agdb_test_notify.vcproj
msvscpp/agdb_test_open_close/: agdb_test_open_close.vcproj
msvscpp/agdb_test_source_information/: agdb_test_source_information.vcproj
msvscpp/agdb_test_support/: agdb_test_support.vcproj
msvscpp/agdb_test_tools_info_handle/: agdb_test_tools_info_handle.vcproj
msvscpp/agdb_test_tools_output/: agdb_test_tools_output.vcproj
msvscpp/agdb_test_tools_signal/: agdb_test_tools_signal.vcproj
msvscpp/agdb_test_volume_information/: agdb_test_volume_information.vcproj
msvscpp/agdbinfo/: agdbinfo.vcproj
msvscpp/libagdb/: libagdb.vcproj
msvscpp/libagdb_dll/: libagdb_dll.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
ossfuzz/: Makefile.am  file_fuzzer.cc  ossfuzz_libagdb.h
tests/: Makefile.am  agdb_test_compressed_block.c  agdb_test_compressed_blocks_stream_data_handle.c  agdb_test_compressed_file_header.c  agdb_test_error.c  agdb_test_file.c  agdb_test_file_information.c  agdb_test_functions.c  agdb_test_functions.h  agdb_test_get_version.c  agdb_test_getopt.c  agdb_test_getopt.h  agdb_test_io_handle.c  agdb_test_libagdb.h  agdb_test_libbfio.h  agdb_test_libcerror.h  agdb_test_libclocale.h  agdb_test_libcnotify.h  agdb_test_libcstring.h  agdb_test_libcsystem.h  agdb_test_libfdata.h  agdb_test_libuna.h  agdb_test_macros.h  agdb_test_memory.c  agdb_test_memory.h  agdb_test_notify.c  agdb_test_open_close.c  agdb_test_source_information.c  agdb_test_support.c  agdb_test_tools_info_handle.c  agdb_test_tools_output.c  agdb_test_tools_signal.c  agdb_test_unused.h  agdb_test_volume_information.c  atlocal.in  pkgbuild.sh  runtests.sh  test_agdbinfo.ps1  test_agdbinfo.sh  test_api_types.ps1  (+9 more)
tests/data/: file_information.1  volume_information.1
