MSVSCPP_FILES = \
	agdb_test_error/agdb_test_error.vcproj \
	agdb_test_file/agdb_test_file.vcproj \
	agdb_test_file_information/agdb_test_file_information.vcproj \
	agdb_test_notify/agdb_test_notify.vcproj \
	agdb_test_source_information/agdb_test_source_information.vcproj \
	agdb_test_support/agdb_test_support.vcproj \
	agdb_test_volume_information/agdb_test_volume_information.vcproj \
	agdbinfo/agdbinfo.vcproj \
	libagdb/libagdb.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libagdb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

